# AgentJudge

./: .gitignore  LICENSE  README.md  hes  hh  histot.txt  jj  jjjk  mede.txt  mede_questions.txt  mele.txt  meleTT  milte  my_test_run.txt  pyproject.toml  test.txt  tets
AgentJudge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
agentjudge/: __init__.py  __main__.py  cli.py  evaluator.py  files.py  models.py  providers.py  scenarios.py
